--- a/proyecto/.gitignore
+++ b/proyecto/.gitignore
@@ -37,6 +37,7 @@ env/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/*
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
