--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,22 @@ Pillow==5.0.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
 pytz==2018.3
+cairocffi==0.8.0
+CairoSVG==2.1.3
+cffi==1.11.5
+cssselect2==0.2.1
+defusedxml==0.5.0
+Django==2.0.2
+html5lib==1.0.1
+pdfrw==0.4
+Pillow==5.0.0
+psycopg2==2.7.4
+psycopg2-binary==2.7.4
+pycparser==2.18
+Pyphen==0.9.4
+pytz==2018.3
+reportlab==3.4.0
+six==1.11.0
+tinycss2==0.6.1
+WeasyPrint==0.42.3
+webencodings==0.5.1
